# binary_encrypter

./: .gitignore  Cargo.toml  build.rs
.github/workflows/: release.yml  rust.yml
src/: main.rs
