[package]
name = "binary_encrypter"
version = "1.0.1"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
rsa = { version = "0.9.10", features = ["pem"] }
rand = "0.8.5"
sha2 = "0.10.9"
anyhow = "1.0.100"
clap = { version = "4.5.55", features = ["derive"] }

reqwest = { version = "0.13", features = ["json", "native-tls"] }


[build-dependencies]
regex = "1.12.2"
